# pavement-defect-detector

./: .gitignore  README.md  main.py  pyproject.toml
models/: classifier.joblib
src/: analyze_errors.py  app.py  config.py  dataset.py  download_dataset.py  evaluate_classifier.py  features.py  inspect_dataset.py  predict.py  prepare_dataset.py  train_classifier.py  visualize_errors.py
